<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">
        
        Arogya</string>
    <string name="action_settings">Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="dob">Set Date Of Birth</string>
    <string name="cal">Calendar</string>
    <string name="sub">Proceed >></string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="dev">About</string>
    <color name="green">#1A8507</color>
    <color name="blue">#0033FF</color>
    <color name="gb">#00FFFF</color>
    <color name="red">#FF9933 </color>
    <color name="black">#000000 </color>
    <color name="white">#FFFFFF </color>
    <color name="back">#99FFCC</color>

</resources>
